// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders btn 1`] = `
<button
  className="cHlpJQ"
>
  Lorem
</button>
`;

exports[`Renders btn 2`] = `
<button
  className="cHlpJQ"
>
  Ipsum
</button>
`;

exports[`Renders btn 3`] = `
<button
  className="cHlpJQ"
>
  💩
</button>
`;
